// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component should be Large 1`] = `
<section
  className="section is-large"
  style={Object {}}
>
  <p>
    Default
  </p>
</section>
`;

exports[`Section component should concat classname in props with Bulma classname 1`] = `
<section
  className="section other-class this-is-a-test"
  style={Object {}}
>
  <p>
    Default
  </p>
</section>
`;

exports[`Section component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": null,
    "children": null,
    "className": "",
    "clearfix": false,
    "clipped": false,
    "hidden": false,
    "invisible": false,
    "italic": false,
    "marginless": false,
    "overlay": false,
    "paddingless": false,
    "pull": null,
    "radiusless": false,
    "renderAs": "section",
    "responsive": undefined,
    "shadowless": false,
    "size": null,
    "style": Object {},
    "textAlignment": null,
    "textColor": null,
    "textSize": null,
    "textTransform": null,
    "textWeight": null,
    "unselectable": false,
  },
  "propTypes": Object {
    "backgroundColor": [Function],
    "children": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "renderAs": [Function],
    "responsive": [Function],
    "shadowless": [Function],
    "size": [Function],
    "style": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Section component should have section classname 1`] = `
<section
  className="section"
  style={Object {}}
>
  Test 
  <a
    href="/"
  >
    Give me
  </a>
</section>
`;

exports[`Section component should render as nav element 1`] = `
<nav
  className="section"
  style={Object {}}
>
  <p>
    Default
  </p>
</nav>
`;

exports[`Section component should use inline styles 1`] = `
<section
  className="section"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</section>
`;
